[package]
name = "statusbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["full"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107" }
time = { version = "0.3.29", features = ["serde", "serde-well-known"] }
tokio = { version = "1.32.0", features = ["full"] }
log = { version =  "0.4" }
pretty_env_logger = { version = "0.4"}
